--- a/index.html
+++ b/index.html
@@ -379,64 +379,76 @@
             font-size: 1.2rem;
         }
 
-        /* Estilos específicos para impressão */
+        /* Estilos específicos para impressão colorida - A4 210mm x 297mm */
         @media print {
             @page {
-                size: A4 portrait;
-                margin: 1cm;
+                size: 210mm 297mm;
+                margin: 8mm;
             }
 
             body {
-                background: white !important;
-                color: black !important;
-                font-size: 10pt;
-                line-height: 1.4;
+                background: linear-gradient(135deg, #f8fffe 0%, #e8f8ff 100%) !important;
+                color: #00314E !important;
+                font-size: 7pt;
+                line-height: 1.1;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .container {
                 max-width: none;
                 padding: 0;
                 margin: 0;
+                transform: scale(0.68);
+                transform-origin: top left;
+                width: 147%;
+                height: auto;
             }
 
             .header {
                 background: white !important;
-                box-shadow: none !important;
-                border: 1px solid #ccc !important;
+                border: 2px solid #01BEFF !important;
+                border-radius: 12px !important;
                 page-break-inside: avoid;
-                margin-bottom: 1cm;
+                margin-bottom: 4mm;
+                padding: 6mm !important;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .logo {
-                width: 80px !important;
-                margin-bottom: 0.5cm;
+                width: 45px !important;
+                margin-bottom: 2mm;
             }
 
             .header h1 {
-                font-size: 18pt !important;
-                margin-bottom: 0.3cm;
-                color: black !important;
-                text-shadow: none !important;
+                font-size: 14pt !important;
+                margin-bottom: 1mm;
+                color: #00314E !important;
             }
 
             .header h2 {
-                font-size: 14pt !important;
-                color: #333 !important;
-                margin-bottom: 0.5cm;
+                font-size: 10pt !important;
+                color: #56D500 !important;
+                margin-bottom: 2mm;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .patient-info {
                 grid-template-columns: repeat(3, 1fr);
-                gap: 0.5cm;
-                margin-top: 0.5cm;
+                gap: 2mm;
+                margin-top: 2mm;
             }
 
             .info-card {
-                background: #f5f5f5 !important;
-                color: black !important;
-                padding: 0.5cm;
-                border: 1px solid #ccc;
-                box-shadow: none !important;
+                background: linear-gradient(135deg, #56D500, #4BC200) !important;
+                color: white !important;
+                padding: 3mm;
+                border-radius: 6px !important;
+                font-size: 7pt;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .print-button {
@@ -444,16 +456,18 @@
             }
 
             .timeline {
-                margin: 1cm 0;
+                margin: 3mm 0;
             }
 
             .timeline::before {
-                background: #ccc !important;
+                background: linear-gradient(to bottom, #56D500, #01BEFF) !important;
                 width: 2px;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .timeline-item {
-                margin: 0.8cm 0;
+                margin: 2.5mm 0;
                 page-break-inside: avoid;
                 animation: none !important;
                 opacity: 1 !important;
@@ -461,10 +475,13 @@
 
             .timeline-content {
                 background: white !important;
-                box-shadow: none !important;
-                border: 1px solid #ccc !important;
-                padding: 0.5cm;
-                width: 42% !important;
+                border: 1px solid #01BEFF !important;
+                border-radius: 8px !important;
+                padding: 3mm;
+                width: 44% !important;
+                font-size: 6pt;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .timeline-content:hover {
@@ -473,100 +490,149 @@
             }
 
             .timeline-date {
-                background: #333 !important;
+                background: #00314E !important;
                 color: white !important;
-                padding: 0.3cm 0.5cm;
-                font-size: 9pt;
-                box-shadow: none !important;
+                padding: 1.5mm 3mm;
+                font-size: 6pt;
+                border-radius: 10px !important;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .event-title {
-                font-size: 12pt !important;
-                color: black !important;
-                margin-bottom: 0.3cm;
+                font-size: 8pt !important;
+                color: #00314E !important;
+                margin-bottom: 1.5mm;
             }
 
             .event-icon {
-                background: #ccc !important;
-                color: black !important;
+                background: #56D500 !important;
+                color: white !important;
+                width: 14px !important;
+                height: 14px !important;
+                font-size: 5pt;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .event-details {
-                color: black !important;
-                font-size: 9pt;
-                line-height: 1.3;
+                color: #00314E !important;
+                font-size: 6pt;
+                line-height: 1.1;
             }
 
             .event-details strong {
-                color: black !important;
+                color: #56D500 !important;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .cid-tag {
-                background: #e0e0e0 !important;
-                color: black !important;
-                border: 1px solid #ccc;
+                background: linear-gradient(135deg, #01BEFF, #0099CC) !important;
+                color: white !important;
+                padding: 0.1cm 0.3cm;
+                border-radius: 10px !important;
+                font-size: 6pt;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .medication-list {
-                background: #f9f9f9 !important;
-                border-left: 3px solid #ccc !important;
-                padding: 0.3cm;
-                margin: 0.3cm 0;
+                background: #f0f9ff !important;
+                border-left: 3px solid #01BEFF !important;
+                padding: 0.2cm;
+                margin: 0.2cm 0;
+                border-radius: 0 6px 6px 0 !important;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .medication-list h4 {
-                color: black !important;
-                font-size: 10pt;
+                color: #00314E !important;
+                font-size: 8pt;
+                margin-bottom: 0.1cm;
+            }
+
+            .medication-list li {
+                font-size: 7pt;
+                color: #00314E !important;
             }
 
             .status-badge {
-                background: #e0e0e0 !important;
-                color: black !important;
-                border: 1px solid #ccc;
+                font-size: 6pt;
+                padding: 0.1cm 0.3cm;
+                border-radius: 10px !important;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
+            }
+
+            .status-improvement {
+                background: linear-gradient(135deg, #56D500, #4BC200) !important;
+                color: white !important;
+            }
+
+            .status-investigation {
+                background: linear-gradient(135deg, #01BEFF, #0099CC) !important;
+                color: white !important;
+            }
+
+            .status-treatment {
+                background: linear-gradient(135deg, #00314E, #004466) !important;
+                color: white !important;
             }
 
             .summary-section {
                 background: white !important;
-                box-shadow: none !important;
-                border: 1px solid #ccc !important;
-                margin-top: 1cm;
+                border: 2px solid #56D500 !important;
+                border-radius: 10px !important;
+                margin-top: 3mm;
+                padding: 4mm !important;
                 page-break-inside: avoid;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .summary-section h3 {
-                color: black !important;
-                font-size: 14pt;
+                color: #00314E !important;
+                font-size: 10pt;
+                margin-bottom: 2mm;
             }
 
             .summary-grid {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 0.5cm;
+                gap: 2mm;
             }
 
             .summary-card {
-                background: #f9f9f9 !important;
-                border: 1px solid #ccc !important;
-                border-left: 3px solid #333 !important;
-                padding: 0.5cm;
+                background: linear-gradient(135deg, #f8fffe, #e8f8ff) !important;
+                border-left: 2px solid #56D500 !important;
+                border-radius: 6px !important;
+                padding: 3mm;
+                -webkit-print-color-adjust: exact !important;
+                color-adjust: exact !important;
             }
 
             .summary-card h4 {
-                color: black !important;
-                font-size: 11pt;
+                color: #00314E !important;
+                font-size: 7pt;
+                margin-bottom: 1mm;
             }
 
             .summary-card p {
-                font-size: 9pt;
-                color: black !important;
+                font-size: 6pt;
+                color: #00314E !important;
+                line-height: 1.1;
             }
 
-            /* Quebras de página estratégicas */
-            .timeline-item:nth-child(6) {
-                page-break-before: always;
+            /* Remove quebras de página para caber tudo em uma folha */
+            .timeline-item {
+                page-break-inside: avoid;
+                page-break-before: auto;
+                page-break-after: auto;
             }
 
             .summary-section {
-                page-break-before: always;
+                page-break-before: auto;
             }
         }
     </style>
@@ -889,5 +955,6 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96f8949f52dcf1e1',t:'MTc1NTI1OTc0MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96f8a4a222c3d986',t:'MTc1NTI2MDM5Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
